Fix letter-spacing in base.css

--- a/src/assets/styles/_base.css
+++ b/src/assets/styles/_base.css
@@ -135,7 +135,7 @@ header {
 	font-family: "Big Shoulders Display", cursive;
 	font-weight: 700;
 	text-transform: uppercase;
-	letter-spacing: 0.8em;
+	letter-spacing: 0.08em;
 	padding-left: 0.32em;
 }
 
